*mkstage4-0.2 (04 Feb 2020)

  04 Feb 2020;  <chymera@gentoo.org> +metadata.xml, +mkstage4-0.2.ebuild:
  app-backup/mkstage4: version bump 0.2