@@ -1,1 +1,1 @@
-DIST mkstage4-0.2.tar.gz 15998 SHA256 d97402d774ff52235e594bbbe6eede2fc0d4acd0b15ad2b1c4b20cffb13b46fd SHA512 31b77782e6b79db1cb1db7baf30a2bd96e828861a9085b257d554d0991ea16299c3cc9a6e3fa2af5738aeb3ffbd040f6627af3510ccb8fd744b59658acc2dd55 WHIRLPOOL 10a41c897abb9a8cea010c9877881b11ebbeb5e38243cf729aa19fef30897c17df73dca9a5025143c6c612a995daee3b895b6f0cbed585b62a5d5690fa484fe8
+DIST mkstage4-0.3.tar.gz 18648 SHA256 5dda4a3511f9dd578d5e13c477eb156487feb80f970fca94943d110b576889ac SHA512 6971bf4b43a2fdef0b54802b010c99e95caf896c8e109c54f5a6beb4db1714ea5639e0859ba3f958eed92b9fc6a3bb613bb82de440729e71e53543d60549d2db WHIRLPOOL dd1f9eb331e2040ca50a4429be46b47a77eaad22e8a5ab1a0e7f3a444de8fd4b66a8adf3f28064564555513b04b5a3caf9c5187d352748b09de32837e8390b5f
