@@ -1,3 +1,9 @@
+*mkstage4-0.3 (06 Apr 2020)
+
+  06 Apr 2020;  <chymera@gentoo.org> +mkstage4-0.3.ebuild, -mkstage4-0.2.ebuild,
+  metadata.xml:
+  app-backup/mkstage4: version bump 0.3
+
 *mkstage4-0.2 (04 Feb 2020)
 
   04 Feb 2020;  <chymera@gentoo.org> +metadata.xml, +mkstage4-0.2.ebuild:
